<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_DOState" Id="{c3baf024-6f3a-40cf-9234-349e88976ece}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
// Digital output state
TYPE E_DOState :
(
	Idle			:= 0,		// Idle
	TurnOn			:= 1,		// Turn on
	TurnOff			:= 2,		// Turn off
	Toggle			:= 3,		// Toggle
	Blinking		:= 4,		// Blinking
	Flashing		:= 5		// Flashing	
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>